--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+@font-face {
+    font-family: 'opendyslexic';
+    src: url('../fonts/OpenDyslexic-Regular.otf');
+    font-style: normal;
+    font-weight: normal;
+} 
+
+@font-face {
+    font-family: 'opendyslexic';
+    src: url('../fonts/OpenDyslexic-Italic.ttf');
+    font-style: italic;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'opendyslexic';
+    src: url('../fonts/OpenDyslexic-Bold.otf');
+    font-weight: bold;
+    font-style: normal;
+} 
+
+@font-face {
+    font-family: 'opendyslexic';
+    src: url('../fonts/OpenDyslexic-Bold-Italic.otf');
+    font-weight: bold;
+    font-style: italic;
+}
+
 *{    
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -20,6 +47,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -265,4 +293,122 @@ footer {
     ol {
         flex-direction: column;
     }
+}
+
+/* ACCESSBILITY */
+
+button.accessibility-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 0.5em 1em;
+    font-size: 1.2em;
+    background-color: #71BA69;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+
+button.accessibility-btn i {
+    font-size: 1.5em;
+}
+
+div.accessibility-menu {
+    position: fixed;
+    bottom: 80px;
+    right: 20px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 1em;
+    display: none;
+    flex-direction: column;
+    gap: 1em;
+    z-index: 999;
+}
+
+div.accessibility-menu button {
+    background: #71BA69;
+    color: white;
+    border: none;
+    padding: 0.5em 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+.high-contrast {
+    background-color: #000;
+    color: #fff;
+}
+
+.high-contrast a {
+    color: #1E90FF;
+    text-decoration: underline;
+}
+
+.high-contrast p,
+.high-contrast h1,
+.high-contrast h2,
+.high-contrast h3,
+.high-contrast h4,
+.high-contrast h5,
+.high-contrast h6 {
+    color: #fff;
+}
+
+.high-contrast div.container {
+    border: 2px solid #fff;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.high-contrast button {
+    background-color: #1E90FF;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+.high-contrast img.picture {
+    border: 5px solid #fff;
+}
+
+.high-contrast div.skill {
+    background: conic-gradient(
+        from 90deg,
+        #FF4500 calc(var(--progress) * 1%),
+        rgba(255, 255, 255, 0.1) calc(var(--progress) * 1%)
+    );
+}
+
+.high-contrast div.skill::after {
+    background: #000;
+}
+
+.high-contrast footer {
+    color: #888;
+}
+
+.high-contrast .accessibility-menu button {
+    background-color: #FF4500;
+    color: #fff;
+}
+
+.high-contrast div.accessibility-menu {
+    background-color: #000;
+    border: 2px solid #fff;
+}
+
+.high-contrast {
+    background: black;
+    color: yellow;
+}
+
+.high-contrast a {
+    color: cyan;
 }
